k8s/strapi-internal-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: strapi-internal
    namespace: strapi
    annotations:
        kubernetes.io/ingress.class: nginx-internal-lb
        nginx.ingress.kubernetes.io/client-body-buffer-size: 200m
        nginx.ingress.kubernetes.io/connection-proxy-header: keep-alive
        nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
        nginx.ingress.kubernetes.io/cors-allow-headers: accept,authorization,content-type,traceparent
        nginx.ingress.kubernetes.io/cors-allow-origin: >-
            $http_referer, http://localhost:1337, http://127.0.0.1:1337, https://website-cms.internal.openobserve.ai


        nginx.ingress.kubernetes.io/enable-cors: "true"
        nginx.ingress.kubernetes.io/proxy-body-size: 200m
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
    ingressClassName: nginx-internal-lb
    rules:
        - host: website-cms.internal.openobserve.ai
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: strapi
                            port:
                                number: 1337
